Fix wrapping of social icons

--- a/css/home.css
+++ b/css/home.css
@@ -191,7 +191,7 @@ canvas {
         max-width: 52vw;
     }
 }
-@media (max-width: 440px) {
+@media (max-width: 460px) {
     .social {
         max-width: 250px;
     }
